# osvc-kalkulacka

./: ADVANCED_USAGE.md  AGENTS.md  CHANGELOG.md  README.md  SOURCES.md  pyproject.toml
.github/workflows/: release.yml
osvc_kalkulacka/: cli.py  core.py
osvc_kalkulacka/data/: year_defaults.toml  year_presets.example.toml
tests/: test_compute.py  test_precedence.py  test_smoke_packaging.py
