[project]
name = "osvc-kalkulacka"
version = "0.1.0"
description = "OSVČ kalkulačka (DPFO + ZP/SP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click>=8.1"]

[project.scripts]
osvc = "osvc_kalkulacka.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osvc_kalkulacka"]

[tool.hatch.build.targets.wheel.package-data]
osvc_kalkulacka = ["data/*.toml"]

[dependency-groups]
dev = [
    "pytest",
]
